# Stack

./: .gitignore  CMakeLists.txt  Docs_config  Makefile  README.md
documentation/html/: annotated.html  classes.html  debug__mode_8h.html  debug__mode_8h_source.html  dir_234e3c07af0121e58027bfef5fbfc5a9.html  dir_45f5a25a9d29f3258a5dcd55de035dd5.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5465169396d6db4651809863e5924b48.html  dir_5cefb66a2b3927b099ebe0b9254f9408.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6ad736b28619076cea02ab2d76b2fcc5.html  dir_a459d002846c36671961b1bb4b9e960e.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dea6549b1b1a162e1e6a1522ce153a28.html  dir_e16697f2f466e37a36d4ee2fb4fcf684.html  dir_e19a36ce3cbab9320a7bd8b066469e06.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  index.html  input__output_8h.html  input__output_8h_source.html  md_README.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  settings_8h.html  settings_8h_source.html  stack_8cpp.html  stack_8h.html  stack_8h_source.html  stack__utils_8h.html  stack__utils_8h_source.html  structstack__t-members.html  (+5 more)
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  defines_0.js  defines_1.js  defines_2.js  defines_4.js  enums_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
documentation/latex/: annotated.tex  debug__mode_8h.tex  debug__mode_8h_source.tex  files.tex  input__output_8h.tex  input__output_8h_source.tex  md_README.tex  md__r_e_a_d_m_e.tex  refman.tex  settings_8h.tex  settings_8h_source.tex  stack_8cpp.tex  stack_8h.tex  stack_8h_source.tex  stack__utils_8h.tex  stack__utils_8h_source.tex  structstack__t.tex  utils_8h.tex  utils_8h_source.tex  verify_8h.tex  verify_8h_source.tex
include/: debug_mode.h  input_output.h  settings.h  stack.h  stack_utils.h  utils.h  verify.h
source/: input_output.cpp  main.cpp  stack.cpp  stack_utils.cpp  utils.cpp  verify.cpp
source/stack/: stack.cpp  stack.h
source/stack_utils/: stack_utils.cpp
